force-app/main/default/objects/ssot__SurveyInvitation__dlm/fields/ssot__CanParticipantRespondAnonymously__c.field-meta.xml
<CustomField>
    <fullName>ssot__CanParticipantRespondAnonymously__c</fullName>
    <label>Can Participant Respond Anonymously</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CanParticipantRespondAnonymously</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>