force-app/main/default/objects/ssot__SurveyInvitation__dlm/fields/ssot__InvitationLink__c.field-meta.xml
<CustomField>
    <fullName>ssot__InvitationLink__c</fullName>
    <label>Invitation Link</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InvitationLink</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>