force-app/main/default/objects/ssot__SurveyInvitation__dlm/fields/ssot__SurveyResponseStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__SurveyResponseStatus__c</fullName>
    <label>Survey Response Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SurveyResponseStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>